Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26455

Wrong directory separators within install_target in makefiles (win + mingw)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0 Beta 2
    • 5.0.0 Beta 1
    • Build tools: qmake
    • None
    • Windows, MinGW
    • 3c05a0f3e7cad3ef4738eb11df4d427c8dbc13e8

      I have downloaded recent beta snapshot from here http://releases.qt-project.org/qt5.0/beta-snapshots/2012-07-06_19-01-48/qt-everywhere-opensource-src-5.0.0-beta.7z

      After running configure.bat some files named Makefile.Release contain wrong paths in 'install_target' targets which results in 'make install' to stop with error message "wrong command syntax" received from windows command shell cmd.exe. It seems to me that the problem is with directory separators (they should be '\' on windows, not '/').

      For example, look at piece of 'Makefile.Release' file in directory qtbase\src\gui:

      install_target: all FORCE
      @if not exist c:$(INSTALL_ROOT)\Dev\Qt5\qtbase\bin\Qt\Qt\lib $(MKDIR) c:$(INSTALL_ROOT)\Dev\Qt5\qtbase\bin\Qt\Qt\lib
      -$(INSTALL_FILE) "..\..\lib\QtGui.prl" "c:$(INSTALL_ROOT)\Dev\Qt5\qtbase\bin\Qt\Qt\lib\QtGui.prl"
      @if not exist c:$(INSTALL_ROOT)/Dev/Qt5/qtbase/bin/Qt/Qt/lib/pkgconfig $(MKDIR) c:$(INSTALL_ROOT)/Dev/Qt5/qtbase/bin/Qt/Qt/lib/pkgconfig
      -$(INSTALL_FILE) "..\..\lib\pkgconfig\QtGui.pc" "c:$(INSTALL_ROOT)\Dev\Qt5\qtbase\bin\Qt\Qt\lib\pkgconfig\QtGui.pc"
      -$(INSTALL_FILE) "c:\Dev\Qt5\qtbase\lib\libQtGui5.a" "c:$(INSTALL_ROOT)\Dev\Qt5\qtbase\bin\Qt\Qt\lib\libQtGui5.a"
      -$(INSTALL_FILE) "$(DESTDIR_TARGET)" "c:$(INSTALL_ROOT)\Dev\Qt5\qtbase\bin\Qt\Qt\lib\$(TARGET)"

      All directories which contain makefiles with this issue in my case are these subdirectories inside qtbase\src:
      concurrent, gui, network, opengl, platformsupport, printsupport, sql, testlib, widgets, xml.

      After I manually replaced directory separators in that makefiles 'make install' completed successfully.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            romualdo Roman
            romualdo Roman
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes